--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import  '../node_modules/ngx-toastr/toastr.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -33,12 +34,12 @@ body{
 
 
 .custom-scrollbar::-webkit-scrollbar {
-    display: none; 
+    display: none;
 }
 
 .custom-scrollbar {
-    -ms-overflow-style: none;  
-    scrollbar-width: none; 
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 
