--- a/src/app/Components/GlobalLoading/global-loading.component.html
+++ b/src/app/Components/GlobalLoading/global-loading.component.html
@@ -1,3 +1,10 @@
 <div class="loader-container">
-  <div class="loader"></div>
+  <div class="spinner">
+    <div ></div>
+    <div ></div>
+    <div ></div>
+    <div ></div>
+    <div ></div>
+    <div ></div>
+  </div>  
 </div>
