--- a/src/app/Components/Sections/aside-navbar/aside-navbar.component.html
+++ b/src/app/Components/Sections/aside-navbar/aside-navbar.component.html
@@ -10,16 +10,17 @@
             <i class="bi bi-pie-chart-fill" routerLink="/dashboard/control"></i>
         </div>
         <div class="cover">
-            <i class="bi bi-stack"></i>
-        </div>
-        <div class="cover">
-            <i class="bi bi-people-fill" routerLink="/dashboard/employee/store/device"></i>
+            <i class="bi bi-cpu" routerLink="/dashboard/employee/store/device"></i>
         </div>
     </section>
     <section class="profile flex justify-center items-center">
-        <i class="bi bi-person-fill" routerLink="/dashboard/my/info"></i>
+      <div class="cover">
+      <i class="bi bi-person-fill" routerLink="/dashboard/my/info"></i>
+      </div>
     </section>
     <section class="profile flex justify-center items-center">
-        <button class="bi bi-box-arrow-right" (click)="exit()"></button>
+      <div class="cover">
+      <button class="bi bi-box-arrow-right" (click)="exit()"></button>
+      </div>
     </section>
 </section>
