vista dispositivos usuario + cambios diseño

--- a/src/app/Views/Device/show-device/show-device.component.css
+++ b/src/app/Views/Device/show-device/show-device.component.css
@@ -1,5 +1,5 @@
 .img{
-  background-image: url('../../../../resources/images/backImage.jpg.png');
+  background-image: url('../../../../resources/images/backImage.png');
   mask-image: linear-gradient(
     to top,
     transparent 0%,
