--- a/src/app/Views/Welcome/welcome-view.component.html
+++ b/src/app/Views/Welcome/welcome-view.component.html
@@ -1,3 +1,5 @@
 <div class="h-full w-full flex items-center justify-center text-gray-400">
-  <h1 class="text-4xl font-bold" @slideInFromRight>¡Bienvenido a nuestra aplicación!</h1>
+  <h1 class=" tttx text-4xl text-white font-bold" style="text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;" @slideInFromRight>¡Bienvenido a nuestra aplicación!</h1>
+  <div @slideInFromRight class="img"></div>
+
 </div>
