--- a/src/app/Components/Sections/aside-navbar/aside-navbar.component.html
+++ b/src/app/Components/Sections/aside-navbar/aside-navbar.component.html
@@ -1,4 +1,4 @@
-<section class="w-full h-full grid"  style="background-color: #1a1c1e;">
+<section class="w-full h-full grid"  style="background-color: #00000093;">
     <section class="logo flex justify-center items-center">
         <div class="img"></div>
     </section>
@@ -8,9 +8,6 @@
         </div>
         <div class="cover">
             <i class="bi bi-pie-chart-fill" routerLink="/dashboard/control"></i>
-        </div>
-        <div class="cover" *ngIf="role === 2">
-            <i class="bi bi-laptop" routerLink="/dashboard/employee/store/device"></i>
         </div>
         <div class="cover" *ngIf="role === 2">
             <i class="bi bi-stack" routerLink="/dashboard/employee/devicesindex"></i>
