--- a/src/app/Layouts/dashboard/dashboard.component.html
+++ b/src/app/Layouts/dashboard/dashboard.component.html
@@ -1,13 +1,12 @@
-<main class="flex justify-center items-center">
-    <div class=" h-full w-full grid contenedor">
+<main class="flex justify-center items-center h-screen relative">
+    <div class="fondoAnimado absolute inset-0"></div>
+    <div class="contenedor h-full w-full grid relative z-10">
         <aside>
             <app-aside-navbar (exit)="exit()"  />
         </aside>
         <main class="router-outlet">
             <router-outlet ></router-outlet>
         </main> 
-        <div class="stars"></div>
-        <div class="twinkling"></div>
-        <app-GlobalLoader class="inded" *ngIf="loadinglogout"></app-GlobalLoader>
+        <app-GlobalLoader *ngIf="loadinglogout"></app-GlobalLoader>
     </div>
 </main>
