--- a/src/app/Views/UserUpdate/user-update.component.css
+++ b/src/app/Views/UserUpdate/user-update.component.css
@@ -10,6 +10,55 @@
   justify-content: space-between;
 }
 
+.devicestore{
+  right: 0;
+}
+
+.stars {
+  width:100%;
+  height:100%;
+  display:block;
+  position: absolute;
+  background:#00000000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
+  z-index:0;
+}
+
+.indess{
+  position: relative;
+  z-index: 1;
+
+}
+.devices{
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  gap: 15px;
+  width: 50%;
+  height: 90%;
+  padding: 5vh;
+  background-color: #0000009c;
+  border-radius: 4vh;
+
+  scrollbar-width: thin; 
+  scrollbar-color: rgba(255, 255, 255, 0.5) transparent; 
+
+  &::-webkit-scrollbar {
+      width: 8px; 
+  }
+
+  &::-webkit-scrollbar-track {
+      background: transparent; 
+  }
+
+  &::-webkit-scrollbar-thumb {
+      background-color: rgba(255, 255, 255, 0.5); 
+      border-radius: 4px; 
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+      background: rgba(162, 164, 255, 0.74); /* Color de la barrita al pasar el mouse */
+  }
+}
 
 .email {
   font-family: "Inter", sans-serif;
