--- a/src/app/Components/Sections/maps/maps.component.html
+++ b/src/app/Components/Sections/maps/maps.component.html
@@ -1,10 +1,11 @@
-
 <google-map 
   height="100%"
   width="100%"
   [center]="center"
-  [zoom]="zoom">
-    @for (position of markerPositions; track position) {
-      <map-marker [position]="position" [options]="markerOptions" />
-    }
+  [zoom]="zoom"
+  [options]="options">
+    <ng-container *ngFor="let position of markerPositions">
+      <map-marker [position]="position" [options]="markerOptions"></map-marker>
+    </ng-container>
 </google-map>
+
