--- a/src/app/Views/Control/control-view.component.css
+++ b/src/app/Views/Control/control-view.component.css
@@ -12,3 +12,13 @@ article{
     background-color: #272b2e;
     border-radius: 10px;
 }
+
+.bottom {
+    grid-template-columns: 2fr 3fr;
+    gap: 1rem;
+}
+.bgg {
+    background-color: rgba(0, 0, 0, 0.534);
+    border-radius: 2vh;
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.212);
+}
