cambiando device id a code

--- a/src/app/Views/Devices/select-device/select-device.component.html
+++ b/src/app/Views/Devices/select-device/select-device.component.html
@@ -18,7 +18,7 @@
         class="devices" style="max-height: 80vh;">
         <div *ngFor="let device of devices">
             <app-device-row 
-            (click)="selectDevice(device.id)"
+            (click)="selectDevice(device.code)"
             [reference]="device.code"/>
         </div>
       </div>
